--- a/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
+++ b/Source/Frontend/digitr/src/pages/whatsnew/whatsnew.html
@@ -17,11 +17,12 @@
 
 
 <ion-content padding>
-  <h1>Stability Improvements</h1>
+  <h1>New Features:</h1>
   <ul>
-    <li>Improved data accuracy in the Analytics panel</li>
-    <li>Added a manual send back button to the Analytics panel</li>
-    <li>Students are automatically sent back after a pass has been inactive for more than 1 day (logged as 1 hour)</li>
+    <li>Added CSV filtering options for teachers and administrators</li>
+    <li>Admins are able to remove and search for students and teachers in their school</li>
+    <li>Admins are able to give the teachers the option to view which students are out school-wide</li>
+    <li>Finally, admins have the option to only let students from a pre-determined list sign up for Digitr</li>
   </ul>
   <h5>Also, the iOS app version of Digitr is in the <a target="_new" href="https://itunes.apple.com/us/app/digitr/id1434334094?ls=1&mt=8">App Store</a>.</h5>
   <button ion-button full (click)="close()">Try now</button>
