Add pdf user guides

--- a/Source/Frontend/digitr/src/pages/now-students/now-students.html
+++ b/Source/Frontend/digitr/src/pages/now-students/now-students.html
@@ -30,7 +30,7 @@
                 <ion-icon item-start name="send"></ion-icon>
                 Messages
             </button>
-            <a target="_new" href="https://mpassapp.com">
+            <a target="_new" href="https://mpassapp.com/pdf-user-guides">
               <button ion-item menuClose="teacher" detail-none>
                 <ion-icon item-start name="help-circle"></ion-icon>
                 Help
