--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -30,7 +30,7 @@
                 <ion-icon item-start name="people"></ion-icon>
                 Admin
             </button>
-            <a target="_new" href="https://mpassapp.com">
+            <a target="_new" href="https://mpassapp.com/pdf-user-guides">
               <button ion-item menuClose="teacher" detail-none>
                 <ion-icon item-start name="help-circle"></ion-icon>
                 Help
