--- a/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
+++ b/Source/Frontend/digitr/src/pages/now-teachers/now-teachers.html
@@ -339,16 +339,14 @@
       <ion-list-header>Teacher Sign Up</ion-list-header>
       <ion-item>
         <ion-label>Disable new teachers from signing in.</ion-label>
-        <ion-toggle #legacy *ngIf="dist.teachers_enabled == null" [checked]="false" (click)="edit($event, 'teachers_enabled', !(legacy.checked))"></ion-toggle>
-        <ion-toggle #legacy *ngIf="dist.teachers_enabled != null" [checked]="!dist.teachers_enabled" (click)="edit($event, 'teachers_enabled', !(legacy.checked))"></ion-toggle>
+        <ion-toggle #teachers [checked]="!dist.teachers_enabled" (click)="edit($event, 'teachers_enabled', !teachers.checked)"></ion-toggle>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-list-header>Currently Out</ion-list-header>
       <ion-item>
         <ion-label>Let teachers view which students are out school-wide.</ion-label>
-        <ion-toggle #out *ngIf="dist.out_teachers == null" [checked]="false" (click)="edit($event, 'out_teachers', (out.checked))"></ion-toggle>
-        <ion-toggle #out *ngIf="dist.out_teachers != null" [checked]="dist.out_teachers" (click)="edit($event, 'out_teachers', (out.checked))"></ion-toggle>
+        <ion-toggle #out [checked]="dist.out_teachers" (click)="edit($event, 'out_teachers', out.checked)"></ion-toggle>
       </ion-item>
     </ion-list>
     <ion-list>
